--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<img id="iphone" src="11.png"  >
 			</div>
 
-      <div id="caja_inferior">
+      <div id="caja_inferior"><!-- cajapara caja ferior -->
 
         <div id="caja_titulo">
           <div id="titulo">
@@ -42,9 +42,17 @@
 
       </div>
       </div>
-      	<div id="caja6"><!-- footer-->
-
+         	<div id="caja6"><!-- footer-->
+      <div id="redes"><!-- caja para redes -->
+      <div id="red1">
+      <img class="face1" src="face.png">
+      </div>
+      <div id="red2">
+      <img class="face1" src="twitter.png"  >
+      </div>
+      </div>
 	</div>
 		</div>
+ 
   </body>
 </html>
